--- a/modelo/assets/css/style.css
+++ b/modelo/assets/css/style.css
@@ -56,3 +56,11 @@ form button {
 form button:hover {
   background: var(--primary-color-darker);
 }
+.paragrafo-resultado{
+  background: rgb(109, 255, 182);
+  padding: 10px 20px;
+}
+.bad{
+  background: rgb(250, 150, 150);
+  padding: 10px 20px;
+}
